# euler

./: Primes.hs  pr1.hs  pr10.hs  pr12.hs  pr13.hs  pr14.hs  pr15.hs  pr16.hs  pr17.hs  pr21.hs  pr23.hs  pr24.hs  pr25.hs  pr26.hs  pr27.hs  pr30.hs  pr31.hs  pr32.hs  pr34.hs  pr35.hs  pr37.hs  pr38.hs  pr39.hs  pr40.hs  pr42.hs  pr45.hs  pr48.hs  pr50.hs  pr52.hs  pr67.hs  pr7.hs  pr79.hs  pr9.hs
.fossil-settings/: ignore-glob
ada/: .gitignore  Makefile  euler-triangle.adb  euler-triangle.ads  euler.adb  euler.ads  generate_list.adb  get.pl  heap.adb  heap.ads  heap_sieve.adb  heap_sieve.ads  main.adb  miller_rabin.adb  miller_rabin.ads  permutations.adb  permutations.ads  pr001.adb  pr002.adb  pr003.adb  pr004.adb  pr005.adb  pr006.adb  pr007.adb  pr008.adb  pr009.adb  pr010.adb  pr011.adb  pr012.adb  pr013.adb  pr014.adb  pr015.adb  pr016.adb  pr017.adb  pr018.adb  pr019.adb  pr020.adb  pr021.adb  pr022.adb  pr023.adb  (+54 more)
ats/: Makefile  get.sh  ind.sh  pr1.dats  pr2.dats
avail/: Pr001.avail  Pr002.avail  Pr003.avail  Pr004.avail  Pr005.avail  Pr006.avail  Pr007.avail  Pr008.avail  Pr009.avail  Sieve.avail  get.py
bigloo/: .afile  .gitignore  Makefile  get.pl  pr001.scm  pr002.scm  pr003.scm  pr004.scm  pr005.scm  pr006.scm  pr007.scm  pr008.scm  pr009.scm  pr010.scm  pr011.scm  pr012.scm  pr013.scm  pr014.scm  pr015.scm  pr016.scm  pr017.scm  sieve.scm  utilities.scm
chez/: euler.ss  pr001.ss  pr002.ss  pr003.ss  pr004.ss  pr005.ss  pr006.ss  pr007.ss  pr008.ss  pr009.ss  pr010.ss  pr011.ss  pr012.ss  pr013.ss  pr014.ss  pr015.ss  pr016.ss  pr017.ss  pr018.ss  pr019.ss  pr020.ss  pr021.ss  pr022.ss  pr023.ss  pr024.ss  pr025.ss  pr026.ss  pr027.ss  pr028.ss  pr029.ss  pr030.ss  pr031.ss  pr032.ss  pr033.ss  pr034.ss  sieve.ss  util.ss
chicken/: .gitignore  Makefile  get.pl  pr001.scm  pr002.scm  pr003.scm  pr004.scm  pr005.scm  pr006.scm  pr007.scm  pr008.scm  pr009.scm  pr010.scm  pr011.scm  pr012.scm  pr013.scm  pr014.scm  pr015.scm  pr016.scm  pr017.scm  pr018.scm  pr020.scm  sieve.scm
clj/: .gitignore  README  get.pl  pr69.clj  pr99.clj  project.clj
cobol/: euler-problem-001.cbl  euler-problem-002.cbl  euler-problem-003.cbl  euler-problem-004.cbl  euler-problem-005.cbl  euler-problem-006.cbl  euler-problem-007.cbl  euler-problem-008.cbl  get.pl  run.sh  (+16 more)
haskell/heuler/: .gitignore  LICENSE  README.md  heuler.cabal
haskell/heuler/app/: Main.hs
haskell/heuler/src/: Euler.hs  Lib.hs
haskell/heuler/src/Euler/: Nums.hs  Pr001.hs  Pr002.hs  Pr003.hs  Pr004.hs  Pr005.hs  Pr006.hs  Pr007.hs  Pr008.hs  Pr009.hs  Pr010.hs  Pr011.hs  Primes.hs  Problem.hs
ocaml/: Makefile  _tags  bench.ml  dune  euler.ml  euler.mli  get.pl  misc.ml  misc.mli  myocamlbuild.ml  pr001.ml  pr002.ml  pr003.ml  pr004.ml  pr005.ml  pr006.ml  pr007.ml  pr008.ml  pr009.ml  pr010.ml  pr011.ml  pr012.ml  pr013.ml  pr014.ml  pr015.ml  pr016.ml  pr017.ml  pr018.ml  pr019.ml  pr020.ml  pr021.ml  pr022.ml  pr023.ml  pr024.ml  pr025.ml  pr026.ml  pr027.ml  pr028.ml  pr029.ml  pr030.ml  (+44 more)
ocaml/genprob/: dune  genprob.ml
rust/: .bc  .gitignore  Cargo.toml  Makefile  build.rs  euler.rs  get.pl  get.py  miller.rs  misc.rs  permute.rs  pr001.rs  pr002.rs  pr003.rc  pr003.rs  pr004.rs  pr005.rs  pr006.rs  pr007.rs  pr008.rs  pr009.rs  pr010.rc  pr010.rs  pr011.rs  pr012.rs  pr013.rs  pr014.rs  pr015.rs  pr016.rs  pr017.rs  pr018.rs  pr019.rs  pr020.rs  pr021.rs  pr022.rs  pr023.rs  pr024.rs  pr025.rs  pr026.rs  pr027.rs  (+29 more)
rust/src/: euler.rs  miller.rs  misc.rs  permute.rs  plist.rs  pr001.rs  pr002.rs  pr003.rs  pr004.rs  pr005.rs  pr006.rs  pr007.rs  pr008.rs  pr009.rs  pr010.rs  pr011.rs  pr012.rs  pr013.rs  pr014.rs  pr015.rs  pr016.rs  pr017.rs  pr018.rs  pr019.rs  pr020.rs  pr021.rs  pr022.rs  pr023.rs  pr024.rs  pr025.rs  pr026.rs  pr027.rs  pr028.rs  pr029.rs  pr030.rs  pr031.rs  pr032.rs  pr033.rs  pr034.rs  pr035.rs  (+17 more)
(+1706 files in other folders)
