; Dune build for project euler

(executable
  (name euler)
  (libraries core num)
  (preprocess (pps ppx_deriving.ord ppx_deriving.eq ppx_sexp_conv
                   ppx_deriving.show))
  )

(rule
  (targets problems.ml)
  (deps (:gen genprob/genprob.exe) (:mls (glob_files pr???.ml)))
  (action (run %{gen} -o %{targets} %{mls})))
