name:                heuler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/d3zd3z/euler/heuler#readme
license:             BSD3
license-file:        LICENSE
author:              David Brown
maintainer:          davidb@davidb.org
copyright:           2017 David Brown
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
        , containers >= 0.5 && < 1
  default-language:    Haskell2010
  other-modules:
        Euler.Problem,
        Euler.Primes,
        Euler.Pr001,
        Euler.Pr002,
        Euler.Pr003

executable heuler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , heuler
        , containers >= 0.5 && < 1
  default-language:    Haskell2010

test-suite heuler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , heuler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/d3zd3z/euler
